@@ -1,13 +1,19 @@
 package uk.gov.hmcts.reform.prl.services;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
+import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
+import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
+import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
 import uk.gov.hmcts.reform.prl.enums.Event;
 import uk.gov.hmcts.reform.prl.enums.FL401OrderTypeEnum;
 import uk.gov.hmcts.reform.prl.enums.c100respondentsolicitor.RespondentSolicitorEvents;
+import uk.gov.hmcts.reform.prl.events.CaseDataChanged;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.complextypes.TypeOfApplicationOrders;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
@@ -15,19 +21,32 @@ import uk.gov.hmcts.reform.prl.models.tasklist.RespondentTask;
 import uk.gov.hmcts.reform.prl.models.tasklist.Task;
 import uk.gov.hmcts.reform.prl.models.tasklist.TaskState;
 import uk.gov.hmcts.reform.prl.services.c100respondentsolicitor.validators.RespondentEventsChecker;
-import uk.gov.hmcts.reform.prl.services.validators.EventsChecker;
+import uk.gov.hmcts.reform.prl.services.document.DocumentGenService;
+import uk.gov.hmcts.reform.prl.services.tab.alltabs.AllTabServiceImpl;
+import uk.gov.hmcts.reform.prl.services.validators.eventschecker.EventsChecker;
+import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ISSUED_STATE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JUDICIAL_REVIEW_STATE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.ROLES;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SUBMITTED_STATE;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V2;
 import static uk.gov.hmcts.reform.prl.enums.Event.ALLEGATIONS_OF_HARM;
+import static uk.gov.hmcts.reform.prl.enums.Event.ALLEGATIONS_OF_HARM_REVISED;
 import static uk.gov.hmcts.reform.prl.enums.Event.APPLICANT_DETAILS;
 import static uk.gov.hmcts.reform.prl.enums.Event.ATTENDING_THE_HEARING;
 import static uk.gov.hmcts.reform.prl.enums.Event.CASE_NAME;
+import static uk.gov.hmcts.reform.prl.enums.Event.CHILDREN_AND_APPLICANTS;
+import static uk.gov.hmcts.reform.prl.enums.Event.CHILDREN_AND_OTHER_PEOPLE_IN_THIS_APPLICATION;
+import static uk.gov.hmcts.reform.prl.enums.Event.CHILDREN_AND_RESPONDENTS;
 import static uk.gov.hmcts.reform.prl.enums.Event.CHILD_DETAILS;
+import static uk.gov.hmcts.reform.prl.enums.Event.CHILD_DETAILS_REVISED;
 import static uk.gov.hmcts.reform.prl.enums.Event.FL401_APPLICANT_FAMILY_DETAILS;
 import static uk.gov.hmcts.reform.prl.enums.Event.FL401_CASE_NAME;
 import static uk.gov.hmcts.reform.prl.enums.Event.FL401_HOME;
@@ -40,7 +59,9 @@ import static uk.gov.hmcts.reform.prl.enums.Event.HEARING_URGENCY;
 import static uk.gov.hmcts.reform.prl.enums.Event.INTERNATIONAL_ELEMENT;
 import static uk.gov.hmcts.reform.prl.enums.Event.LITIGATION_CAPACITY;
 import static uk.gov.hmcts.reform.prl.enums.Event.MIAM;
+import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_CHILDREN_NOT_PART_OF_THE_APPLICATION;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PEOPLE_IN_THE_CASE;
+import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PEOPLE_IN_THE_CASE_REVISED;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PROCEEDINGS;
 import static uk.gov.hmcts.reform.prl.enums.Event.RELATIONSHIP_TO_RESPONDENT;
 import static uk.gov.hmcts.reform.prl.enums.Event.RESPONDENT_BEHAVIOUR;
@@ -58,6 +79,7 @@ import static uk.gov.hmcts.reform.prl.enums.c100respondentsolicitor.RespondentSo
 import static uk.gov.hmcts.reform.prl.enums.c100respondentsolicitor.RespondentSolicitorEvents.CURRENT_OR_PREVIOUS_PROCEEDINGS;
 import static uk.gov.hmcts.reform.prl.enums.c100respondentsolicitor.RespondentSolicitorEvents.KEEP_DETAILS_PRIVATE;
 import static uk.gov.hmcts.reform.prl.enums.c100respondentsolicitor.RespondentSolicitorEvents.VIEW_DRAFT_RESPONSE;
+import static uk.gov.hmcts.reform.prl.utils.CaseUtils.getCaseData;
 
 
 @Slf4j
@@ -67,6 +89,12 @@ public class TaskListService {
 
     private final EventsChecker eventsChecker;
     private final RespondentEventsChecker respondentEventsChecker;
+    @Qualifier("allTabsService")
+    private final AllTabServiceImpl tabService;
+    private final UserService userService;
+    private final DocumentGenService dgsService;
+    private final ObjectMapper objectMapper;
+    private final EventService eventPublisher;
 
     public List<Task> getTasksForOpenCase(CaseData caseData) {
         return getEvents(caseData).stream()
@@ -74,7 +102,7 @@ public class TaskListService {
                 .event(event)
                 .state(getTaskState(caseData, event))
                 .build())
-            .collect(toList());
+            .toList();
     }
 
     public List<RespondentTask> getRespondentSolicitorTasks(PartyDetails respondingParty) {
@@ -83,7 +111,7 @@ public class TaskListService {
                 .event(event)
                 .state(getRespondentTaskState(event, respondingParty))
                 .build())
-            .collect(toList());
+            .toList();
     }
 
     private TaskState getTaskState(CaseData caseData, Event event) {
@@ -96,7 +124,7 @@ public class TaskListService {
         if (eventsChecker.isStarted(event, caseData)) {
             return TaskState.IN_PROGRESS;
         }
-        return TaskState.NOT_STARTED;
+        return eventsChecker.getDefaultState(event,caseData);
     }
 
     private TaskState getRespondentTaskState(RespondentSolicitorEvents event, PartyDetails respondingParty) {
@@ -110,11 +138,38 @@ public class TaskListService {
     }
 
     private List<Event> getEvents(CaseData caseData) {
-        return caseData.getCaseTypeOfApplication().equalsIgnoreCase(PrlAppsConstants.FL401_CASE_TYPE)
-            ? getFL401Events(caseData) : getC100Events();
+        return (PrlAppsConstants.FL401_CASE_TYPE).equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))
+            ? getFL401Events(caseData) : getC100Events(caseData);
     }
 
-    public List<Event> getC100Events() {
+    public List<Event> getC100Events(CaseData caseData) {
+
+        if (TASK_LIST_VERSION_V2.equalsIgnoreCase(caseData.getTaskListVersion())) {
+            return new ArrayList<>(List.of(
+                    CASE_NAME,
+                    TYPE_OF_APPLICATION,
+                    HEARING_URGENCY,
+                    CHILD_DETAILS_REVISED,
+                    APPLICANT_DETAILS,
+                    RESPONDENT_DETAILS,
+                    OTHER_PEOPLE_IN_THE_CASE_REVISED,
+                    OTHER_CHILDREN_NOT_PART_OF_THE_APPLICATION,
+                    CHILDREN_AND_APPLICANTS,
+                    CHILDREN_AND_RESPONDENTS,
+                    CHILDREN_AND_OTHER_PEOPLE_IN_THIS_APPLICATION,
+                    ALLEGATIONS_OF_HARM_REVISED,
+                    MIAM,
+                    OTHER_PROCEEDINGS,
+                    ATTENDING_THE_HEARING,
+                    INTERNATIONAL_ELEMENT,
+                    LITIGATION_CAPACITY,
+                    WELSH_LANGUAGE_REQUIREMENTS,
+                    VIEW_PDF_DOCUMENT,
+                    SUBMIT_AND_PAY,
+                    SUBMIT
+            ));
+        }
+
         return new ArrayList<>(List.of(
             CASE_NAME,
             TYPE_OF_APPLICATION,
@@ -123,7 +178,7 @@ public class TaskListService {
             CHILD_DETAILS,
             RESPONDENT_DETAILS,
             MIAM,
-            ALLEGATIONS_OF_HARM,
+                ALLEGATIONS_OF_HARM,
             OTHER_PEOPLE_IN_THE_CASE,
             OTHER_PROCEEDINGS,
             ATTENDING_THE_HEARING,
@@ -134,7 +189,6 @@ public class TaskListService {
             SUBMIT_AND_PAY,
             SUBMIT
         ));
-
     }
 
     public List<Event> getFL401Events(CaseData caseData) {
@@ -185,5 +239,40 @@ public class TaskListService {
             VIEW_DRAFT_RESPONSE,
             RespondentSolicitorEvents.SUBMIT
         ));
+    }
+
+    public AboutToStartOrSubmitCallbackResponse updateTaskList(CallbackRequest callbackRequest, String authorisation) {
+        CaseData caseData = getCaseData(callbackRequest.getCaseDetails(), objectMapper);
+        Map<String, Object> caseDataUpdated = callbackRequest.getCaseDetails().getData();
+        eventPublisher.publishEvent(new CaseDataChanged(caseData));
+        UserDetails userDetails = userService.getUserDetails(authorisation);
+        List<String> roles = userDetails.getRoles();
+        boolean isCourtStaff = roles.stream().anyMatch(ROLES::contains);
+        String state = callbackRequest.getCaseDetails().getState();
+        if (isCourtStaff && (SUBMITTED_STATE.equalsIgnoreCase(state) || ISSUED_STATE.equalsIgnoreCase(state))
+            || JUDICIAL_REVIEW_STATE.equalsIgnoreCase(state)) {
+            try {
+                caseDataUpdated.putAll(dgsService.generateDocuments(authorisation, caseData));
+                CaseData updatedCaseData = objectMapper.convertValue(caseDataUpdated, CaseData.class);
+                caseData = caseData.toBuilder()
+                    .c8Document(updatedCaseData.getC8Document())
+                    .c1ADocument(updatedCaseData.getC1ADocument())
+                    .c8WelshDocument(updatedCaseData.getC8WelshDocument())
+                    .finalDocument(updatedCaseData.getFinalDocument())
+                    .finalWelshDocument(updatedCaseData.getFinalWelshDocument())
+                    .c1AWelshDocument(updatedCaseData.getC1AWelshDocument())
+                    .build();
+            } catch (Exception e) {
+                log.error("Error regenerating the document", e);
+            }
+        }
+
+        tabService.updateAllTabsIncludingConfTab(caseData);
+
+        if (!isCourtStaff) {
+            eventPublisher.publishEvent(new CaseDataChanged(caseData));
+        }
+
+        return AboutToStartOrSubmitCallbackResponse.builder().data(caseDataUpdated).build();
     }
 }
